# mcp-okta-support

./: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
docs/: architecture.md  intelligent_agent.md  setup.md  troubleshooting.md  usage.md
examples/: claude_desktop_config.json  claude_desktop_config_enhanced.json  claude_desktop_config_with_prompt.json  prompt_examples.md  sample_queries.md
scripts/: debug.py  setup.sh  start.sh  test.sh  test_integration.py  validate.py
src/mcp_okta_support/: __init__.py  config.py  exceptions.py  main.py
src/mcp_okta_support/mcp/: __init__.py  prompts.py  resources.py  server.py  tools.py
src/mcp_okta_support/okta/: __init__.py  applications.py  client.py  logs.py  models.py  users.py
src/mcp_okta_support/prompts/: enhanced_system_prompt.md  system_prompt.md
src/mcp_okta_support/utils/: debug.py  logging.py  validators.py
tests/: __init__.py
